[gd_scene load_steps=2 format=2]

[ext_resource path="res://widgets/Zoom.gd" type="Script" id=1]

[node name="Zoom" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Up" type="Button" parent="VBoxContainer"]
margin_right = 89.0
margin_bottom = 20.0
text = "^"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 89.0
margin_bottom = 44.0

[node name="Left" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 20.0
text = "<"

[node name="In" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 24.0
margin_right = 44.0
margin_bottom = 20.0
text = "+"

[node name="Out" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 65.0
margin_bottom = 20.0
text = "-"

[node name="Right" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 69.0
margin_right = 89.0
margin_bottom = 20.0
text = ">"

[node name="Down" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 89.0
margin_bottom = 68.0
text = "v"

[connection signal="pressed" from="VBoxContainer/Up" to="." method="_on_Up_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/In" to="." method="_on_In_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Out" to="." method="_on_Out_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="VBoxContainer/Down" to="." method="_on_Down_pressed"]
